<resources>
    <string name="tab_text_quiz">Quiz</string>
    <string name="tab_text_settings">Settings</string>
    <string name="tab_text_user_profile">User Profile</string>
    <string name="app_name">Quiz</string>
    <string name="tab_txt_quiz">Quiz</string>
    <string name="tab_txt_settings">Settings</string>
    <string name="tab_txt_user_profile">Profile</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_update_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="text_logout">Logout</string>
    <string name="text_update">Save</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="success_update_message">Updated</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_switch_btn">Multiple choice mode</string>
    <string name="text_btn_next">Next</string>
    <string name="text_btn_play_again">Play Again!</string>
    <string name="text_txt_score">Your score: </string>
    <string name="text_score">10</string>
    <string name="alert_dialog_title">Answer</string>
    <string name="alert_dialog_ok">Ok</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="btn_txt_yes">Yes</string>
    <string name="btn_txt_no">No</string>


</resources>
