<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/result_fragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".activities.TabsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.josethomas.quizapp.ResultActivity">

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_txt_score"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/scoreText"
            android:text="@string/text_score"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="35sp"
            android:textColor="#F00"
            android:textAppearance="?android:attr/textAppearanceLarge"/>


    </RelativeLayout>


    <Button
        android:id="@+id/btnStartAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_play_again"
        android:layout_marginBottom="150dp"
        android:background="@color/colorBtnBackground"
        android:layout_gravity="bottom"/>


</FrameLayout>